<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome</string>
    <string name="you_can_add_details_and_get_invoice_form">You can add details and get invoice form</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="generating">Generating</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="_20_feb_2020_8_00_pm">20-Feb-2020 / 8.00 PM</string>
    <string name="customer_information">Customer Information</string>
    <string name="company_name">Company Name</string>
    <string name="company_details">Company Details</string>
    <string name="invoice">invoice</string>
    <string name="invoice_success">Invoice Success</string>
    <string name="transport_details">Transport Details</string>
    <string name="dispatch_through">Dispatch Through</string>
    <string name="lr_number">LR Number</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="terms_of_delivery">Payment  Mode</string>
    <string name="product_details">Product Details</string>
    <string name="s_no">S.No :</string>
    <string name="product_description">Product Description</string>
    <string name="hsn_sac_code">HSN/SAC code</string>
    <string name="add_charges">Add Charges</string>
    <string name="inclusive_of_gst">inclusive of gst</string>
    <string name="selling_price">Selling Price</string>
    <string name="quantity">Quantity</string>
    <string name="all_fields_are_necessary">*** All fields are necessary</string>
</resources>