<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".AddDetailsActivity"
        tools:showIn="@layout/activity_add_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:focusableInTouchMode="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/receipt_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/invoice_number"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/invoice_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/generating"
                        android:textSize="12sp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/receipt_label"
                        app:layout_constraintTop_toBottomOf="@+id/receipt_label" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/receipt_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/invoice_date"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/guideline11"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/receipt_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/_20_feb_2020_8_00_pm"
                        android:singleLine="true"

                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/receipt_date_label"
                        app:layout_constraintTop_toBottomOf="@+id/receipt_label" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/cardView1"
                app:layout_constraintTop_toBottomOf="@id/cardView1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/headView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/company_details"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toEndOf="@id/headView"
                        android:text="@string/all_fields_are_necessary"
                        android:textColor="@color/teal_700"
                        android:textSize="12sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/companyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/company_name"
                        android:textSize="12sp"
                        android:inputType="text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/headView" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/transportDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/companyName"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/transport_details"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/dispatch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/dispatch_through"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/transportDetails" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/lrNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/lr_number"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/dispatch" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/vehicleNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/vehicle_number"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lrNo" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/termsDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/terms_of_delivery"
                        android:textSize="12sp"
                        android:inputType="text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/vehicleNumber" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/productDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/termsDelivery"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/product_details"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/productDetails"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/s_no"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sNumberVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/sNumber"
                        app:layout_constraintTop_toTopOf="@id/sNumber"
                        app:layout_constraintBottom_toBottomOf="@id/sNumber"
                        android:text="@string/generating"
                        android:textSize="12sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/inclusiveGst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/sNumberVal"

                        app:layout_constraintTop_toTopOf="@id/sNumber"
                        app:layout_constraintBottom_toBottomOf="@id/sNumber"

                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:text="@string/inclusive_of_gst"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/sellingPrice"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/selling_price"
                        android:inputType="number"
                        android:textSize="12sp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sNumber" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/qty"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/quantity"
                        android:inputType="number"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/sellingPrice"
                        app:layout_constraintBottom_toBottomOf="@id/sellingPrice"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@id/sellingPrice"
                        app:layout_constraintTop_toBottomOf="@id/sNumber" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/productDes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/product_description"
                        android:textSize="12sp"
                        android:inputType="text"
                        android:singleLine="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sellingPrice" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/hsnCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/hsn_sac_code"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/productDes" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/addCharges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:inputType="number"
                        android:hint="@string/add_charges"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/hsnCode" />







                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addInvoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice"
                android:background="@color/teal_200"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/cvCardView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginRight="16dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>